[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.9", features = ["runtime-actix-rustls", "sqlx-postgres", "macros"] }
dotenv = "0.15"
uuid = { version = "1.1", features = ["v4"] }